@@ -1,5 +1,5 @@
 LIST(APPEND JSC_LIBRARIES
-    ${Glib_LIBRARIES}
+    ${GLIB_LIBRARIES}
     ${ECORE_LIBRARIES}
     ${CMAKE_DL_LIBS}
 )
