@@ -13,7 +13,8 @@ LIST(APPEND WTF_SOURCES
 
 LIST(APPEND WTF_LIBRARIES
     pthread
-    ${Glib_LIBRARIES}
+    ${GLIB_LIBRARIES}
+    ${GLIB_GIO_LIBRARIES}
     ${ICU_LIBRARIES}
     ${ICU_I18N_LIBRARIES}
     ${ECORE_LIBRARIES}
@@ -33,7 +34,7 @@ LIST(APPEND WTF_INCLUDE_DIRECTORIES
     ${ECORE_INCLUDE_DIRS}
     ${ECORE_EVAS_INCLUDE_DIRS}
     ${EVAS_INCLUDE_DIRS}
-    ${Glib_INCLUDE_DIRS}
+    ${GLIB_INCLUDE_DIRS}
     ${ICU_INCLUDE_DIRS}
     ${JAVASCRIPTCORE_DIR}/wtf/gobject
     ${JAVASCRIPTCORE_DIR}/wtf/unicode/
