@@ -33,8 +33,7 @@ FIND_PACKAGE(JPEG REQUIRED)
 FIND_PACKAGE(PNG REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
-FIND_PACKAGE(Glib 2.31.8 REQUIRED)
-FIND_PACKAGE(Gthread REQUIRED)
+FIND_PACKAGE(GLIB 2.31.8 REQUIRED COMPONENTS gio gthread)
 FIND_PACKAGE(LibSoup2 2.39.4.1 REQUIRED)
 SET(ENABLE_GLIB_SUPPORT ON)
 
