@@ -1,3 +1,12 @@
+2012-08-13  Raphael Kubo da Costa  <rakuco@webkit.org>
+
+        [CMake] Remove glib-related Find modules and write single new one instead.
+        https://bugs.webkit.org/show_bug.cgi?id=93786
+
+        Reviewed by Rob Buis.
+
+        * shell/PlatformEfl.cmake: Use GLIB_* instead of Glib_*.
+
 2012-08-12  Allan Sandfeld Jensen  <allan.jensen@nokia.com>
 
         Doesn't build with ENABLE_JIT=0
